# TestWorkPR

./: .env  .gitignore  README.md  alembic.ini  celerybeat-schedule  command.txt  docker-compose.yml  pyproject.toml  web.env
alembic/: env.py
alembic/versions/: 4d68e1cd1853_.py  afb3384e0986_.py  c1b58756ed06_.py
app/: main.py
app/api/: currencies_route.py  ticker_route.py
app/core/: db_connector.py
app/models/: __init__.py  data_price_cripto.py
app/repository/: price_repo.py
app/schemas/: base_schema.py  currency_schema_response.py  deribit_price_schema_response.py  paginate_schema.py
app/services/: currency_services.py  ticker_services.py
app/utils/: derebit_connector.py
app/worker/: celery.py  tasks.py
