[project]
name = "testworkpr"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.3",
    "asyncpg>=0.31.0",
    "celery[async]>=5.6.2",
    "pydantic>=2.12.5",
    "kombu>=5.3.0,<6.0",
    "redis>=4.5.0,<6.0",
    "fastapi>=0.128.0",
    "psycopg2-binary>=2.9.11",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "alembic>=1.18.1",
]
